solved the sideways scrolling issue on mobile

--- a/style.css
+++ b/style.css
@@ -329,6 +329,7 @@ h2.widgettitle:first-child{
  
 /* Portrait tablet and down */
 @media (max-width: 979px) {
+    html{ width: 99%;}
     #main-content, #post-content, #page-content{
         margin-top: 45px;
     }
